<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/feedTabTxt"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="#D8D8D8"
        android:gravity="center"
        android:text="@string/home"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/feedingBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="#C3C3C3"
        android:drawableStart="@drawable/bottle_layer"
        android:drawableEnd="@drawable/right_smaller"
        android:gravity="center"
        android:text="@string/feeding"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedTabTxt" />


    <Button
        android:id="@+id/nappyBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="#C3C3C3"
        android:drawableStart="@drawable/nappy_layer"
        android:drawableEnd="@drawable/right_smaller"
        android:gravity="center"
        android:text="@string/nappy_change"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedingBtn" />

    <Button
        android:id="@+id/sleepBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="#C3C3C3"
        android:drawableStart="@drawable/sleep_layer"
        android:drawableEnd="@drawable/right_smaller"
        android:gravity="center"
        android:text="@string/sleep_or_nap"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nappyBtn" />

    <Button
        android:id="@+id/heightBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="#C3C3C3"
        android:drawableStart="@drawable/height_layer"
        android:drawableEnd="@drawable/right_smaller"
        android:gravity="center"
        android:text="@string/height_weight"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleepBtn" />

    <Button
        android:id="@+id/historyBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="#C3C3C3"
        android:drawableStart="@drawable/history_layer"
        android:drawableEnd="@drawable/right_smaller"
        android:gravity="center"
        android:text="@string/history"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightBtn" />




</androidx.constraintlayout.widget.ConstraintLayout>